ocaml/testsuite/tests/typing-polyvariants-bugs-2/pr3918c.compilers.reference
File "pr3918c.ml", line 24, characters 11-12:
24 | let f x = (x : 'a vlist :> 'b vlist)
                ^
Error: This expression has type 'b Pr3918b.vlist = 'a
       but an expression was expected of type 'b Pr3918b.vlist = 'c
       The type variable 'a occurs inside ('e * 'd) Pr3918a.voption as 'd
